# qxmt

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  qxmt.ansatze.base.html  qxmt.ansatze.builder.html  qxmt.ansatze.html  qxmt.ansatze.pennylane.all_singles_doubles.html  qxmt.ansatze.pennylane.gete_fabric.html  qxmt.ansatze.pennylane.html  qxmt.ansatze.pennylane.kupccgsd.html  qxmt.ansatze.pennylane.particle_conserving_u1.html  qxmt.ansatze.pennylane.particle_conserving_u2.html  qxmt.ansatze.pennylane.uccsd.html  qxmt.configs.html  qxmt.constants.html  qxmt.datasets.builder.html  qxmt.datasets.dummy.html  qxmt.datasets.dummy.linear.html  qxmt.datasets.dummy.loader.html  qxmt.datasets.file.html  qxmt.datasets.file.loader.html  qxmt.datasets.generate.html  qxmt.datasets.generate.linear.html  qxmt.datasets.generate.loader.html  qxmt.datasets.html  qxmt.datasets.openml.html  qxmt.datasets.openml.loader.html  qxmt.datasets.raw_preprocess.filter.html  qxmt.datasets.raw_preprocess.html  qxmt.datasets.raw_preprocess.sampling.html  (+94 more)
.github/: pull_request_template.md
.github/workflows/: check_status.yaml  code_format.yaml  create_docs.yaml  deploy_docs.yaml  integration_tests.yaml  publish_package.yaml  unit_tests.yaml  unit_tests_llm.yaml  unit_tests_no_llm.yaml
_sources/: qxmt.ansatze.builder.rst  qxmt.ansatze.pennylane.all_singles_doubles.rst  qxmt.ansatze.pennylane.kupccgsd.rst  qxmt.ansatze.pennylane.rst  qxmt.constants.rst  qxmt.datasets.dummy.linear.rst  qxmt.datasets.dummy.rst  qxmt.datasets.file.loader.rst  qxmt.datasets.generate.linear.rst  qxmt.datasets.generate.loader.rst  qxmt.datasets.openml.loader.rst  qxmt.datasets.openml.rst  qxmt.datasets.raw_preprocess.filter.rst  qxmt.datasets.rst  qxmt.datasets.transform.normalizer.rst  qxmt.datasets.transform.rst  qxmt.devices.amazon_device.rst  qxmt.devices.rst  qxmt.evaluation.base.rst  qxmt.evaluation.metrics.base.rst  qxmt.evaluation.metrics.defaults_classification.rst  qxmt.evaluation.metrics.defaults_regression.rst  qxmt.evaluation.rst  qxmt.experiment.experiment.rst  qxmt.experiment.reproducer.rst  qxmt.experiment.rst  qxmt.experiment.schema.rst  qxmt.feature_maps.pennylane.defaults.rst  qxmt.feature_maps.pennylane.npqc.rst  qxmt.feature_maps.pennylane.rotation.rst  qxmt.feature_maps.pennylane.rst  qxmt.feature_maps.rst  qxmt.generators.prompts.rst  qxmt.generators.rst  qxmt.hamiltonians.pennylane.molecular.rst  qxmt.hamiltonians.rst  qxmt.kernels.pennylane.fidelity_kernel.rst  qxmt.kernels.pennylane.rst  qxmt.kernels.rst  qxmt.models.base.rst  (+11 more)
_sources/tutorials/: tutorial_top.md
_static/: custom.css  documentation_options.js
configs/: template-file-classification.yaml  template-file-regression.yaml  template-file.yaml  template-generate-classification.yaml  template-generate-regression.yaml  template-generate.yaml  template-openml-classification.yaml  template-openml-regression.yaml  template-openml.yaml  template-real-machine-ibmq.yaml  template.yaml
configs/plugins/: template-amazon-braket-real.yaml  template-amazon-braket-remote.yaml  template-amazon-braket.yaml
configs/qkernel_model/: template-generate-regression.yaml
configs/qkernel_models/: template-file-classification.yaml  template-file-regression.yaml  template-generate-classification.yaml  template-generate-regression.yaml  template-openml-classification.yaml  template-openml-regression.yaml
configs/vqe_models/: template-cas.yaml  template-h2-dataset.yaml  template-h2-specify.yaml  template-scipy.yaml
docs/: Makefile  make.bat  update_doc.sh
docs/source/: conf.py  index.rst  modules.rst  qxmt.ansatze.base.rst  qxmt.ansatze.pennylane.gete_fabric.rst  qxmt.ansatze.pennylane.particle_conserving_u1.rst  (+101 more)
qk_manager/: __init__.py  constants.py  exceptions.py  utils.py
quri/: __init__.py  exceptions.py  utils.py
qxmt/: __init__.py  configs.py  constants.py  decorators.py  exceptions.py  logger.py  types.py  utils.py
tests/: conftest.py  test_imports.py
tutorials/: tutorial_top.html
(+313 files in other folders)
