[tool.poetry]
name = "qxmt"
version = "0.2.3"  # using poetry-dynamic-versioning
description = "QXMT is a experiment management tool for quantum computing and quantum machine learning."
authors = ["kenya-sk"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kenya-sk/qxmt"
packages = [
    { include = "qxmt" }
]

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"


[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
pydantic = "^2.8.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
pennylane = "^0.37.0"
dill = "^0.3.8"
pyyaml = "^6.0.2"
torch = {version = "^2.4.0", optional = true}
transformers = {version = "^4.44.2", optional = true}
seaborn = "^0.13.2"
openml = "^0.14.2"
optuna = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
ipykernel = "^6.29.5"
pytest-mock = "^3.14.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-book-theme = "^1.1.3"
myst-parser = "^4.0.0"
sphinx-autodoc-typehints = "^2.4.4"

[tool.poetry.extras]
llm = ["torch", "transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
